--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@ body{
 h1{
      font-size: 50px;
 }
+h2{
+     font-size: 40px;
+}
 .one{
      color: orange;
 }
@@ -36,3 +39,29 @@ h1{
      background-repeat: no-repeat;
      background-position: right;
 }
+.seven{
+     box-shadow: 10px 10px 40px gray;
+     border-radius: 10px;
+     width: 40%;
+     margin-left: 5%;
+     margin-right: 5%;
+     padding-left: 20px;
+}
+.eight{
+     background-image: url(images/exp-bg.png);
+     background-repeat: no-repeat;
+     background-position: left;
+}
+#one{
+     border-left: 7px solid;
+    border-image: linear-gradient(salmon, tomato);
+    border-image-slice: 1;
+}
+#two{
+     border-left: 7px solid;
+     border-image: linear-gradient(blue, cyan);
+     border-image-slice: 1;
+ }
+ footer p{
+      text-align: center;
+ }
